// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CentOS 7 tests should correctly analyze a centos image by sha256 1`] = `
Object {
  "scanResults": Array [
    Object {
      "facts": Array [
        Object {
          "data": Object {
            "graph": Object {
              "nodes": Array [
                Object {
                  "deps": Array [],
                  "nodeId": "root-node",
                  "pkgId": "docker-image|centos@",
                },
              ],
              "rootNodeId": "root-node",
            },
            "pkgManager": Object {
              "name": "linux",
              "repositories": Array [
                Object {
                  "alias": "centos:7",
                },
              ],
            },
            "pkgs": Array [
              Object {
                "id": "docker-image|centos@",
                "info": Object {
                  "name": "docker-image|centos",
                  "version": undefined,
                },
              },
            ],
            "schemaVersion": "1.3.0",
          },
          "type": "depGraph",
        },
        Object {
          "data": "sha256:afb6fca791e071c66276202f8efca5ce3d3dc4fb218bcddff1bc565d981ddd1e",
          "type": "imageId",
        },
        Object {
          "data": Array [
            "sha256:fb82b029bea0a2a3b6a62a9c1e47e57fae2a82f629b2d1a346da4fc8fb53a0b6",
          ],
          "type": "imageLayers",
        },
        Object {
          "data": Object {
            "org.label-schema.build-date": "20200504",
            "org.label-schema.license": "GPLv2",
            "org.label-schema.name": "CentOS Base Image",
            "org.label-schema.schema-version": "1.0",
            "org.label-schema.vendor": "CentOS",
            "org.opencontainers.image.created": "2020-05-04 00:00:00+01:00",
            "org.opencontainers.image.licenses": "GPL-2.0-only",
            "org.opencontainers.image.title": "CentOS Base Image",
            "org.opencontainers.image.vendor": "CentOS",
          },
          "type": "imageLabels",
        },
        Object {
          "data": Object {
            "argsEscaped": true,
            "cmd": Array [
              "/bin/bash",
            ],
            "entrypoint": null,
            "env": Array [
              "PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
            ],
            "user": "",
            "volumes": null,
            "workingDir": "",
          },
          "type": "containerConfig",
        },
        Object {
          "data": Array [
            Object {
              "created": "2020-05-05T21:20:34.391894085Z",
              "createdBy": "/bin/sh -c #(nop) ADD file:72b194edf3abedf51401947b23d2e530618a77ec9b5fe05bd185251d104e6f90 in / ",
            },
            Object {
              "created": "2020-05-05T21:20:34.726813065Z",
              "createdBy": "/bin/sh -c #(nop)  LABEL org.label-schema.schema-version=1.0 org.label-schema.name=CentOS Base Image org.label-schema.vendor=CentOS org.label-schema.license=GPLv2 org.label-schema.build-date=20200504 org.opencontainers.image.title=CentOS Base Image org.opencontainers.image.vendor=CentOS org.opencontainers.image.licenses=GPL-2.0-only org.opencontainers.image.created=2020-05-04 00:00:00+01:00",
              "emptyLayer": true,
            },
            Object {
              "created": "2020-05-05T21:20:34.898381457Z",
              "createdBy": "/bin/sh -c #(nop)  CMD [\\"/bin/bash\\"]",
              "emptyLayer": true,
            },
          ],
          "type": "history",
        },
        Object {
          "data": "2020-05-05T21:20:34.898381457Z",
          "type": "imageCreationTime",
        },
        Object {
          "data": Array [
            "sha256:fb82b029bea0a2a3b6a62a9c1e47e57fae2a82f629b2d1a346da4fc8fb53a0b6",
          ],
          "type": "rootFs",
        },
        Object {
          "data": "CentOS Linux 7 (Core)",
          "type": "imageOsReleasePrettyName",
        },
        Object {
          "data": Object {
            "names": Array [
              "centos@sha256:50b9a3bc27378889210f88d6d0695938e45a912aa99b3fdacfb9a0fef511f15a",
            ],
          },
          "type": "imageNames",
        },
        Object {
          "data": "linux/amd64",
          "type": "platform",
        },
        Object {
          "data": "0.0.0-local",
          "type": "pluginVersion",
        },
      ],
      "identity": Object {
        "args": Object {
          "platform": "linux/amd64",
        },
        "type": "linux",
      },
      "target": Object {
        "image": "docker-image|centos",
      },
    },
  ],
}
`;

exports[`CentOS 7 tests should correctly analyze a centos image by tag 1`] = `
Object {
  "scanResults": Array [
    Object {
      "facts": Array [
        Object {
          "data": Object {
            "graph": Object {
              "nodes": Array [
                Object {
                  "deps": Array [],
                  "nodeId": "root-node",
                  "pkgId": "docker-image|centos@7.8.2003",
                },
              ],
              "rootNodeId": "root-node",
            },
            "pkgManager": Object {
              "name": "linux",
              "repositories": Array [
                Object {
                  "alias": "centos:7",
                },
              ],
            },
            "pkgs": Array [
              Object {
                "id": "docker-image|centos@7.8.2003",
                "info": Object {
                  "name": "docker-image|centos",
                  "version": "7.8.2003",
                },
              },
            ],
            "schemaVersion": "1.3.0",
          },
          "type": "depGraph",
        },
        Object {
          "data": "sha256:afb6fca791e071c66276202f8efca5ce3d3dc4fb218bcddff1bc565d981ddd1e",
          "type": "imageId",
        },
        Object {
          "data": Array [
            "sha256:fb82b029bea0a2a3b6a62a9c1e47e57fae2a82f629b2d1a346da4fc8fb53a0b6",
          ],
          "type": "imageLayers",
        },
        Object {
          "data": Object {
            "org.label-schema.build-date": "20200504",
            "org.label-schema.license": "GPLv2",
            "org.label-schema.name": "CentOS Base Image",
            "org.label-schema.schema-version": "1.0",
            "org.label-schema.vendor": "CentOS",
            "org.opencontainers.image.created": "2020-05-04 00:00:00+01:00",
            "org.opencontainers.image.licenses": "GPL-2.0-only",
            "org.opencontainers.image.title": "CentOS Base Image",
            "org.opencontainers.image.vendor": "CentOS",
          },
          "type": "imageLabels",
        },
        Object {
          "data": Object {
            "argsEscaped": true,
            "cmd": Array [
              "/bin/bash",
            ],
            "entrypoint": null,
            "env": Array [
              "PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin",
            ],
            "user": "",
            "volumes": null,
            "workingDir": "",
          },
          "type": "containerConfig",
        },
        Object {
          "data": Array [
            Object {
              "created": "2020-05-05T21:20:34.391894085Z",
              "createdBy": "/bin/sh -c #(nop) ADD file:72b194edf3abedf51401947b23d2e530618a77ec9b5fe05bd185251d104e6f90 in / ",
            },
            Object {
              "created": "2020-05-05T21:20:34.726813065Z",
              "createdBy": "/bin/sh -c #(nop)  LABEL org.label-schema.schema-version=1.0 org.label-schema.name=CentOS Base Image org.label-schema.vendor=CentOS org.label-schema.license=GPLv2 org.label-schema.build-date=20200504 org.opencontainers.image.title=CentOS Base Image org.opencontainers.image.vendor=CentOS org.opencontainers.image.licenses=GPL-2.0-only org.opencontainers.image.created=2020-05-04 00:00:00+01:00",
              "emptyLayer": true,
            },
            Object {
              "created": "2020-05-05T21:20:34.898381457Z",
              "createdBy": "/bin/sh -c #(nop)  CMD [\\"/bin/bash\\"]",
              "emptyLayer": true,
            },
          ],
          "type": "history",
        },
        Object {
          "data": "2020-05-05T21:20:34.898381457Z",
          "type": "imageCreationTime",
        },
        Object {
          "data": Array [
            "sha256:fb82b029bea0a2a3b6a62a9c1e47e57fae2a82f629b2d1a346da4fc8fb53a0b6",
          ],
          "type": "rootFs",
        },
        Object {
          "data": "CentOS Linux 7 (Core)",
          "type": "imageOsReleasePrettyName",
        },
        Object {
          "data": Object {
            "names": Array [
              "centos:7.8.2003",
            ],
          },
          "type": "imageNames",
        },
        Object {
          "data": "linux/amd64",
          "type": "platform",
        },
        Object {
          "data": "0.0.0-local",
          "type": "pluginVersion",
        },
      ],
      "identity": Object {
        "args": Object {
          "platform": "linux/amd64",
        },
        "type": "linux",
      },
      "target": Object {
        "image": "docker-image|centos",
      },
    },
  ],
}
`;
